Fixed Locations Added save system